# libmessagehub

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/messagehub/: exceptions.h  manager.h  message.h  messagecontrol.h  messagehub.h
src/: CMakeLists.txt  main.cpp  manager.cpp  message.cpp  messagecontrol.cpp  messagehub.cpp
tests/: CMakeLists.txt  run_tests.sh  test_manager.cpp  test_message.cpp  test_messagecontrol.cpp
